# semantic-kernel

./: .gitignore  pyproject.toml
dotnet/src/ollama/: Program.cs  ollama.csproj
python/: pyproject.toml
python/example_code/: 0_getting_started.py  1_hugging_face.py
python/notebooks/: 00-getting-started.ipynb
python/semantic_kernel/: __init__.py
python/semantic_kernel/connectors/ai/: __init__.py
python/semantic_kernel/connectors/ai/ollama/: ollama_request_settings.py
python/semantic_kernel/connectors/ai/ollama/services/: ollama_chat_completion.py
