[tool.poetry]
name = "semantic-kernel-from-microsoft"
version = "0.1.0"
description = ""
authors = ["jgilbert <gilbertj@moodys.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
semantic-kernel = "^0.4.1.dev0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
